Changelog
=========

1.0.1 (unreleased)
------------------

- Custom footer. Refs #15426
  [reinhardt]
- Custom colors. Refs #15426
  [reinhardt]
- Make sure vocabularies are included. Refs #15448
  [reinhardt]


1.0.0 (2017-01-27)
------------------

- Initial release
