@@ -18,6 +18,14 @@ body.template-homepage-view .box a.one-line,
 body.template-homepage-view .box a.two-lines {
    background-color:#d3dcdb;
 }
+div#latest_reviews_box ul li {
+   background: transparent url(++resource++recensio.theme.images/blank_icon.png) no-repeat 0 5px;
+   padding: 0 0 0.5em 40px;
+   left: 0;
+}
+div#latest_reviews_box ul > a {
+    display: none;
+}
 #kommentare_container .reply {
 	background-color:#d3dcdb;
 }
